fix: code mirror editor toolbar: horizontal scroll

--- a/workspaces/iam/src/app/modules/markdown/editor/codemirror-editor/codemirror-toolbar/codemirror-toolbar.component.scss
+++ b/workspaces/iam/src/app/modules/markdown/editor/codemirror-editor/codemirror-toolbar/codemirror-toolbar.component.scss
@@ -1,6 +1,9 @@
 .tool-bar--bottom {
   position: fixed;
   bottom: 0;
+  padding: 0;
+  overflow-x: auto;
+  overflow-y: hidden;
 }
 
 .tool-bar {
